_sass/main.scss
/* Theme */

// color scheme - Navy and Ivory by hal - https://terminal.sexy/#Ahsh6N_WAyw2wkVOfL-einpjLjNA_1h5RLWx8vG5Bl9z71hHotmxvrCQYXeN_5mhntnY9vbJ

:root {
  --background-color: rgb(0, 140, 160); // #008CA0
  --foreground-color: rgb(0, 100, 125); // #00647D
  --foreground-color-transparent: rgba(0, 100, 125, 0.50); // #00647D
  --text-color: rgb(240, 240, 240); // #f0f0f0
  --link-color: rgb(0, 225, 125); // #00E196
  --link-color-transparent: rgba(0, 225, 125, 0.25); // #00E196
  --success-color: rgb(0, 225, 175); // #00E196
  --info-color: rgb(125, 225, 225); // #78d4e6
  --warn-color: rgb(225, 225, 125); // #e3da87
  --danger-color: rgb(225, 48, 109); // #d9306d
  --red-shift: rgba(255, 0, 0, 0.75); // #ff0000
  --blue-shift: rgba(0, 0, 255, 0.75); // #0000ff
}

// reusable elements

@mixin monospace {
  font-family: 'IBM_MDA', Consolas, Lucida Console, monospace;
}

@mixin sm-font {
  font-size: 16px;
}

@mixin md-font {
  font-size: 22px;
}

@mixin sm-margin {
  margin: 1rem 0 1rem 0;
}

@mixin md-margin {
  margin: 2rem 0 2rem 0;
}

@mixin padding {
  padding: 1rem;
}

// syntaxhHighlighting - Pygments Monokai - https://raw.githubusercontent.com/jwarby/jekyll-pygments-themes/master/monokai.css

figure, code, pre {
  @include monospace;
  margin: 0;
  padding: 0;
  overflow: scroll;
}

code.highlighter-rouge {
  padding: 0.25rem 0.50rem 0.25rem 0.50rem;
}

.highlighter-rouge {
  background-color: var(--foreground-color);
  margin: 0 0 2rem 0;

  pre.highlight {
    @include padding;
  }
  
  .highlight {
    .hll { background-color: #272822; }
    .c { color: #afafaf } // Comment
    .err { color: #960050; background-color: #1e0010 } // Error
    .k { color: #66d9ef } // Keyword
    .l { color: #ae81ff } // Literal
    .n { color: #f8f8f2 } // Name
    .o { color: #f92672 } // Operator
    .p { color: #f8f8f2 } // Punctuation
    .cm { color: #afafaf } // Comment.Multiline
    .cp { color: #afafaf } // Comment.Preproc
    .c1 { color: #afafaf } // Comment.Single
    .cs { color: #afafaf } // Comment.Special
    .ge { font-style: italic } // Generic.Emph
    .gs { font-weight: bold } // Generic.Strong
    .kc { color: #66d9ef } // Keyword.Constant
    .kd { color: #66d9ef } // Keyword.Declaration
    .kn { color: #f92672 } // Keyword.Namespace
    .kp { color: #66d9ef } // Keyword.Pseudo
    .kr { color: #66d9ef } // Keyword.Reserved
    .kt { color: #66d9ef } // Keyword.Type
    .ld { color: #e6db74 } // Literal.Date
    .m { color: #ae81ff } // Literal.Number
    .s { color: #e6db74 } // Literal.String
    .na { color: #a6e22e } // Name.Attribute
    .nb { color: #f8f8f2 } // Name.Builtin
    .nc { color: #a6e22e } // Name.Class
    .no { color: #66d9ef } // Name.Constant
    .nd { color: #a6e22e } // Name.Decorator
    .ni { color: #f8f8f2 } // Name.Entity
    .ne { color: #a6e22e } // Name.Exception
    .nf { color: #a6e22e } // Name.Function
    .nl { color: #f8f8f2 } // Name.Label
    .nn { color: #f8f8f2 } // Name.Namespace
    .nx { color: #a6e22e } // Name.Other
    .py { color: #f8f8f2 } // Name.Property
    .nt { color: #f92672 } // Name.Tag
    .nv { color: #f8f8f2 } // Name.Variable
    .ow { color: #f92672 } // Operator.Word
    .w { color: #f8f8f2 } // Text.Whitespace
    .mf { color: #ae81ff } // Literal.Number.Float
    .mh { color: #ae81ff } // Literal.Number.Hex
    .mi { color: #ae81ff } // Literal.Number.Integer
    .mo { color: #ae81ff } // Literal.Number.Oct
    .sb { color: #e6db74 } // Literal.String.Backtick
    .sc { color: #e6db74 } // Literal.String.Char
    .sd { color: #e6db74 } // Literal.String.Doc
    .s2 { color: #e6db74 } // Literal.String.Double
    .se { color: #ae81ff } // Literal.String.Escape
    .sh { color: #e6db74 } // Literal.String.Heredoc
    .si { color: #e6db74 } // Literal.String.Interpol
    .sx { color: #e6db74 } // Literal.String.Other
    .sr { color: #e6db74 } // Literal.String.Regex
    .s1 { color: #e6db74 } // Literal.String.Single
    .ss { color: #e6db74 } // Literal.String.Symbol
    .bp { color: #f8f8f2 } // Name.Builtin.Pseudo
    .vc { color: #f8f8f2 } // Name.Variable.Class
    .vg { color: #f8f8f2 } // Name.Variable.Global
    .vi { color: #f8f8f2 } // Name.Variable.Instance
    .il { color: #ae81ff } // Literal.Number.Integer.Long
    .gh { } // Generic Heading & Diff Header
    .gu { color: #afafaf; } // Generic.Subheading & Diff Unified/Comment?
    .gd { color: #f92672; } // Generic.Deleted & Diff Deleted
    .gi { color: #a6e22e; } // Generic.Inserted & Diff Inserted
  }
}

/* Document */

*::selection {
  background-color: var(--info-color);
}

html {
  height: 100%;
  @include monospace;
  //@include md-font;
}

body {
  margin: 0;
  height: 100%;
  line-height: 1.25rem;
  color: var(--text-color);
  text-shadow:
    0.50px 0.50px 0.01rem var(--blue-shift),
    -0.50px -0.50px 0.01rem var(--red-shift);
  background: var(--background-color);
  overscroll-behavior: none;
}

/* preloader */

#preloader {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color:var(--background-color);
	z-index: 99;
}

#status {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
}

#loader {
  height: 7rem;
  width: 7rem;
}

// content

#wrapper {
  min-height: 100%;
  width: 100%;
}

#content {
  max-width: 1000px;
  margin: 0 auto;
  @include padding;
}

h1, h2, h3, h4, h5, h6 {
  text-transform: uppercase;
  line-height: 1.5rem;
}

a, a:active, a:hover, a:visited {
  color: var(--link-color);
  text-decoration: none;
  text-shadow: 0 0 1rem var(--link-color-transparent);
}

strong {
  text-transform: uppercase;
}

ol {
  padding-left: 3rem;
}

ul {
  list-style-type: none;
  padding-left: 1.25rem;

  li::before {
    content: "[*] ";
  }
}

img, canvas, svg {
  width: 100%;
  height: auto;
  image-rendering: auto;
  image-rendering: crisp-edges;
  image-rendering: pixelated;
  filter: contrast(125%) saturate(125%) brightness(110%);
}

table {
  width: 100%;
  margin: 0 0 2rem 0;

  thead {
    text-align: left;

    th {
      background: var(--foreground-color);
      padding: 0.5rem;
    }
  }

  tbody {
    tr {
      td {
        padding: 0.5rem;
      }
    }

    tr:nth-child(even) {
      background: var(--foreground-color-transparent);
    }
  }
}

.navigation {
  .item:first-child::before {
    display: none;
  }

  .item::before {
    content: " | ";
    color: var(--text-color);
  }
}

header {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  .ascii {
    line-height: 0.75rem;
    margin: 2rem 0 2rem 0;
    font-size: 0.75rem;

    .logo-small {
      display: none;
    }
  }
}

main {
  margin: 3rem 0 3rem 0;

  section {
    @include md-margin;
  }

  article {
    margin: 0 0 2.5rem 0;
  }

  h1, h2, h3, h4, h5, h6 {
    @include sm-margin;
    font-size: 1rem;
  }

  h1::before {
    content: "> ";
  }

  h1 {
    padding: 0.5rem;
    @include md-margin;
    background: var(--foreground-color);
  }

  h2:before, h3:before , h4:before, h5:before, h6:before {
    content: "> "
  }

  blockquote {
    margin: 0;
    @include padding;
    background: var(--foreground-color);
  }

  .featured {
    max-height: 300px;
    overflow: hidden;
  }

  .success {
    @include padding;
    text-transform: uppercase;
    background: var(--success-color);
  }

  .info {
    @include padding;
    text-transform: uppercase;
    background: var(--info-color);
  }
  
  .warn {
    @include padding;
    text-transform: uppercase;
    background: var(--warn-color);
  }
  
  .danger {
    @include padding;
    text-transform: uppercase;
    background: var(--danger-color);
  }
}

footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/* Mobile */

@media (max-width: 600px) {
  .ascii {
    .logo-large {
      display: none !important;
    }
  
    .logo-small {
      display: block !important;
    }
  }
}

